--- a/config/changed-apps-build.json
+++ b/config/changed-apps-build.json
@@ -284,8 +284,7 @@
     },
     {
       "rootFolder": "third-party-app-directory",
-      "slackGroup": "<@U022GNYPJ1L>",
-      "slackChannel": "C06JM7UUHE3"
+      "slackGroup": "<@U022GNYPJ1L>"
     },
     {
       "rootFolder": "survivor-dependent-education-benefit",
@@ -293,7 +292,8 @@
     },
     {
       "rootFolder": "terms-of-use",
-      "slackGroup": "<@U018M85FA2K> <@U04M52Y7VFU>"
+      "slackGroup": "<@U018M85FA2K> <@U04M52Y7VFU>",
+      "slackChannel": "C06JM7UUHE3"
     },
     {
       "rootFolder": "toe",
