--- a/src/applications/manifest-catalog.json
+++ b/src/applications/manifest-catalog.json
@@ -1,7 +1,7 @@
 {
   "title": "VA.gov Applications Manifest Catalog",
   "description": "Catalog of all applications in src/applications with their manifest.json metadata for reference",
-  "totalApplications": 134,
+  "totalApplications": 133,
   "applications": [
     {
       "directoryPath": "src/applications/_mock-form",
@@ -454,12 +454,6 @@
       "rootUrl": "/my-health/secure-messages"
     },
     {
-      "directoryPath": "src/applications/mhv-secure-messaging/pilot",
-      "appName": "MHV Secure Messaging - OH Pilot",
-      "entryName": "mhv-secure-messaging-pilot",
-      "rootUrl": "/my-health/secure-messages-pilot"
-    },
-    {
       "directoryPath": "src/applications/mhv-supply-reordering",
       "appName": "Order medical supplies",
       "entryName": "mhv-supply-reordering",
@@ -479,8 +473,14 @@
     },
     {
       "directoryPath": "src/applications/new-28-1900",
+      "appName": "28-1900 Veteran Readiness",
+      "entryName": "28-1900-chapter-31",
+      "rootUrl": "/careers-employment/vocational-rehabilitation/apply-vre-form-28-1900"
+    },
+    {
+      "directoryPath": "src/applications/new-28-1900-bak",
       "appName": "New 28-1900 Veteran Readiness",
-      "entryName": "new-28-1900-chapter-31",
+      "entryName": "28-1900-chapter-31",
       "rootUrl": "/temporary/apply-vre-form-28-1900"
     },
     {
@@ -790,15 +790,9 @@
       "rootUrl": "/contact-us/virtual-agent"
     },
     {
-      "directoryPath": "src/applications/vre/25-8832",
-      "appName": "Apply for Personalized Career Planning and Guidance with VA Form 25-8832",
-      "entryName": "25-8832-planning-and-career-guidance",
-      "rootUrl": "/careers-employment/education-and-career-counseling/apply-career-guidance-form-25-8832"
-    },
-    {
       "directoryPath": "src/applications/vre/28-1900",
       "appName": "28-1900 Veteran Readiness",
-      "entryName": "28-1900-chapter-31",
+      "entryName": "new-28-1900-chapter-31",
       "rootUrl": "/careers-employment/vocational-rehabilitation/apply-vre-form-28-1900"
     },
     {
