--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -162,6 +162,7 @@ jobs:
       changed_file_paths: ${{ steps.get-changed-apps.outputs.changed_files }}
       tests_ran: ${{ steps.tests-ran.outputs.tests_ran }}
       e2e_count: ${{ steps.e2e-count.outputs.count }}
+      changed_unit_tests: ${{ steps.unit-tests-changed.outputs.changed_unit_tests }}
 
     steps:
       - name: Checkout
@@ -230,7 +231,7 @@ jobs:
       - name: Set output of UNIT_TESTS_CHANGED
         if: ${{ always() }}
         id: unit-tests-changed
-        run: echo "tests=$UNIT_TESTS_CHANGED" >> $GITHUB_OUTPUT
+        run: echo "changed_unit_tests=$UNIT_TESTS_CHANGED" >> $GITHUB_OUTPUT
 
       - name: Upload artifact of Unit Tests to Stress Test
         if: ${{ steps.unit-tests-to-stress-test.outputs.tests == 'true' }}
@@ -912,6 +913,7 @@ jobs:
 
   node-22-unit-test-compatibility-check:
     name: Node 22 Compatibility Check For Unit Tests
+    if: ${{ needs.tests-prep.outputs.changed_unit_tests }}
     runs-on: ubuntu-latest
     needs: [tests-prep]
     steps:
@@ -932,41 +934,20 @@ jobs:
             .cache/yarn
             node_modules
 
-      - name: Configure AWS credentials
-        uses: ./.github/workflows/configure-aws-credentials
-        with:
-          aws_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: us-gov-west-1
-
-      - name: Get va-vsp-bot token
-        uses: ./.github/workflows/inject-secrets
-        with:
-          ssm_parameter: /devops/VA_VSP_BOT_GITHUB_TOKEN
-          env_variable_name: VA_VSP_BOT_GITHUB_TOKEN
-
-      # - name: Init Dashboard Data Repo
-      #   uses: ./.github/workflows/init-data-repo
-
-      # - name: Set Up BigQuery Creds
-      #   uses: ./.github/workflows/configure-bigquery
-
-      # - name: Fetch Unit Test Stability Allow List
-      #   run: yarn get-allow-list
-      #   working-directory: qa-standards-dashboard-data
-      #   env:
-      #     TEST_TYPE: unit_test
-      
-      - name: Check for newly added disallowed tests
-        run: node script/github-actions/double-check-allow-list.js
-        env:
-          TEST_TYPE: unit_test
-          TESTS: ${{ env.DISALLOWED_TESTS }}
-          TESTS_PROPERTY: 'DISALLOWED_TESTS'
+      - name: Fetch target branch
+        run: git fetch origin/${{ github.head_ref }}
+      - name: Merge in feature branch
+        run: git merge origin/${{ github.head_ref }} --no-edit
           
       - name: Create test results folder
         run: mkdir -p test-results
 
+      - name: Download Unit Test Stability Allow List
+        uses: ./.github/workflows/download-artifact
+        with:
+          name: changed-unit-tests
+          path: .
+          
       - name: Run unit tests
         id: run-tests
         run: |
@@ -975,18 +956,18 @@ jobs:
           else
             yarn test:unit:gha yarn test:unit:gha "{src,script}/**/*.unit.spec.js?(x)" --coverage --log-level verbose
           fi
-          
         env:
           MOCHA_FILE: test-results/unit-tests.xml
           CHANGED_FILES: ${{ needs.tests-prep.outputs.changed_file_paths }}
           APP_FOLDERS: ${{ needs.tests-prep.outputs.app_folders }}
           IS_STRESS_TEST: false
+          NODE_COMPATBILITY_VERIFICATION: true
 
       - name: Archive unit test results
         if: ${{ always() && steps.run-tests.outputs.tests_ran == 'true' }}
         uses: ./.github/workflows/upload-artifact
         with:
-          name: unit-test-report
+          name: unit-test-node-compatibility-report
           path: mocha/results
          
 
