removing restore key flag from CI job step

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -928,9 +928,7 @@ jobs:
         uses: ./.github/workflows/install
         timeout-minutes: 30
         with:
-          key: 22.11.0-${{ hashFiles('yarn.lock') }}
-          restore-keys: |
-            22.11.0-
+          key: ${{ hashFiles('yarn.lock') }}
           yarn_cache_folder: .cache/yarn
           path: |
             .cache/yarn
