--- a/src/applications/manifest-catalog.json
+++ b/src/applications/manifest-catalog.json
@@ -250,6 +250,12 @@
       "rootUrl": "/school-administrators/35-percent-exemption"
     },
     {
+      "directoryPath": "src/applications/edu-benefits/10275",
+      "appName": "10275",
+      "entryName": "10275-edu-benefits",
+      "rootUrl": "/school-administrators/commit-principles-of-excellence-form-22-10275"
+    },
+    {
       "directoryPath": "src/applications/edu-benefits/10282",
       "appName": "22-10282 IBM Skillsbuild Training Program Intake Application",
       "entryName": "10282-edu-benefits",
@@ -452,12 +458,6 @@
       "appName": "MHV Secure Messaging",
       "entryName": "mhv-secure-messaging",
       "rootUrl": "/my-health/secure-messages"
-    },
-    {
-      "directoryPath": "src/applications/mhv-secure-messaging/pilot",
-      "appName": "MHV Secure Messaging - OH Pilot",
-      "entryName": "mhv-secure-messaging-pilot",
-      "rootUrl": "/my-health/secure-messages-pilot"
     },
     {
       "directoryPath": "src/applications/mhv-supply-reordering",
