added node version and setup node steps

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -923,6 +923,16 @@ jobs:
           fetch-depth: 0
           ref: node-22-bug-bash-testing
 
+      - name: Get Node version
+        id: get-node-version
+        shell: bash
+        run: echo NODE_VERSION=$(cat .nvmrc) >> $GITHUB_OUTPUT
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ steps.get-node-version.outputs.NODE_VERSION }}
+      
       - name: Manual dependencies install
         run: |
           yarn install \
