refined conditional to skip node 22 compatibility job if no unit tests are changed

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -913,7 +913,7 @@ jobs:
 
   node-22-unit-test-compatibility-check:
     name: Node 22 Compatibility Check For Unit Tests
-    if: ${{ needs.tests-prep.outputs.changed_unit_tests }}
+    if: ${{ needs.tests-prep.outputs.changed_unit_tests != 'false' }}
     runs-on: ubuntu-latest
     needs: [tests-prep]
     steps:
