after testing clean up

--- a/config/changed-apps-build.json
+++ b/config/changed-apps-build.json
@@ -308,8 +308,7 @@
     },
     {
       "rootFolder": "vaos",
-      "slackGroup": "@vaos-fe-dev",
-      "slackChannel": "C06JM7UUHE3"
+      "slackGroup": "@vaos-fe-dev"
     },
     {
       "rootFolder": "verify",
