--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -162,6 +162,7 @@ src/applications/hca @department-of-veterans-affairs/1010-health-apps-frontend @
 src/applications/ezr @department-of-veterans-affairs/1010-health-apps-frontend @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/static-pages/hca-performance-warning @department-of-veterans-affairs/1010-health-apps-frontend @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/static-pages/ezr-submission-options @department-of-veterans-affairs/1010-health-apps-frontend @department-of-veterans-affairs/va-platform-cop-frontend
+src/applications/ivc-champv @department-of-veterans-affairs/champva-engineering @department-of-veterans-affairs/va-platform-cop-frontend
 
 # Healthcare Experience
 
@@ -280,6 +281,5 @@ src/applications/third-party-app-directory @department-of-veterans-affairs/va-pl
 src/applications/static-pages/analytics @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/static-pages/download-1095b @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/benefit-eligibility-questionnaire @department-of-veterans-affairs/va-platform-cop-frontend
-src/applications/ivc-champv @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/office-directory @department-of-veterans-affairs/va-platform-cop-frontend
 src/applications/travel-pay @department-of-veterans-affairs/va-platform-cop-frontend
