--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -355,13 +355,11 @@ jobs:
       - name: Run unit tests
         id: run-tests
         run: |
-          # if [[ -n "$APP_FOLDERS" ]]; then
-          #   yarn test:unit:gha ${APP_FOLDERS:+"{script,src/platform,$APP_FOLDERS}/**/*.unit.spec.js?(x)"} --coverage --log-level verbose
-          # else
-          #   yarn test:unit:gha yarn test:unit:gha "{src,script}/**/*.unit.spec.js?(x)" --coverage --log-level verbose
-          # fi
-          set +e
-          yarn test:unit:gha "{src,script}/**/*.unit.spec.js?(x)" --coverage --log-level verbose || true
+          if [[ -n "$APP_FOLDERS" ]]; then
+            yarn test:unit:gha ${APP_FOLDERS:+"{script,src/platform,$APP_FOLDERS}/**/*.unit.spec.js?(x)"} --coverage --log-level verbose
+          else
+            yarn test:unit:gha yarn test:unit:gha "{src,script}/**/*.unit.spec.js?(x)" --coverage --log-level verbose
+          fi
           
         env:
           MOCHA_FILE: test-results/unit-tests.xml
