Add prompts for form building

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lint:js:changed:fix": "LIST=`git diff-index --diff-filter=d --name-only HEAD | grep \"\\.js[x]\\{0,1\\}$\"`; if [ \"$LIST\" ]; then eslint --fix --quiet $LIST; fi",
     "lint:js:fix": "eslint --fix --quiet --ext .js --ext .jsx .",
     "lint:js:untracked:fix": "LIST=`git ls-files --others --exclude-standard | grep \"\\.js[x]\\{0,1\\}$\"`; if [ \"$LIST\" ]; then eslint --fix --quiet $LIST; fi",
+    "lint:js:working:fix": "LIST=`git status --porcelain | grep -E '^(A|M|\\?\\?).*\\.(js|jsx)$' | cut -c4-`; if [ \"$LIST\" ]; then eslint --fix --quiet $LIST; fi",
     "lint:sass": "stylelint src/**/*.scss --fix",
     "lint:sass:changed": "LIST=`git diff-index --diff-filter=d --name-only HEAD -- \"*.scss\"`; if [ \"$LIST\" ]; then stylelint $LIST; fi",
     "list-imports:apps": "node script/list-imports.js --app-dir applications",
