--- a/src/applications/dependents/view-dependents/manifest.json
+++ b/src/applications/dependents/view-dependents/manifest.json
@@ -2,5 +2,5 @@
   "appName": "View Dependents",
   "entryFile": "./view-dependents-entry.jsx",
   "entryName": "dependents-view-dependents",
-  "rootUrl": "/manage-dependents/view"
+  "rootUrl": "/view-change-dependents/view"
 }
