temporary replacement of the reusable action with a hard coded checkout to test with

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1018,8 +1018,16 @@ jobs:
           ssm_parameter: /devops/VA_VSP_BOT_GITHUB_TOKEN
           env_variable_name: VA_VSP_BOT_GITHUB_TOKEN
 
-      - name: Init Dashboard Data Repo
-        uses: ./.github/workflows/init-data-repo
+      # - name: Init Dashboard Data Repo
+      #   uses: ./.github/workflows/init-data-repo
+
+      # Replacement job to force the use of my branch with the fix
+      - name: Force QA repo to test ref
+        run: |
+          git -C qa-standards-dashboard-data fetch origin --tags --prune
+          git -C qa-standards-dashboard-data checkout 0128ad57c5489633ef94b1d19b7bd33c5b882269
+          git -C qa-standards-dashboard-data rev-parse HEAD
+          yarn --cwd qa-standards-dashboard-data install --frozen-lockfile
 
       - name: Set Up BigQuery Creds
         uses: ./.github/workflows/configure-bigquery
